--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "cloudinary": "^1.40.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "graphql-request": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.2",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@grafbase/sdk": "^0.6.2",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
