--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
