--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 NEXT_PUBLIC_GRAFBASE_API_URL=
 NEXT_PUBLIC_GRAFBASE_API_KEY=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-NEXTAUTH_URL=
-NEXTAUTH_URL_INTERNAL=
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
 CLOUDINARY_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-NEXT_PUBLIC_SERVER_URL=
